<resources>
    <string name="app_name">Habit Tracker</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Tracks</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Track</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <string name="junkfood_yes">Yes</string>

    <string name="junkfood_no">Nope</string>

    <string name="exercise_nope">No</string>

    <string name="exercice_yes">Yes</string>
    
    <string name="hint_pet_name">Name</string>

    <string name="category_measurement">Weight</string>

    <string name="hint_weight">Daily Weight</string>

    <string name="unit_weight">Kg</string>

    <string name="category_distance">Distance</string>

    <string name="hint_distance">Daily Distance</string>

    <string name="unit_distance">Km</string>

    <string name="category_exercise">Exercise</string>
</resources>
